# SmartAnalyzer

./: .editorconfig  .gitignore  CLAUDE.md  Caddyfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  package.json  styles.css
backend/: Dockerfile  pyproject.toml  smartanalyzer.db.bak-20260309-1731
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_documents_table.py  003_usage_plan.py  004_create_document_analyses.py  005_add_folders_and_assignment.py  006_add_plugin_workspace_tables.py  007_add_user_settings.py  007_create_user_settings.py  008_create_user_feature_flags.py  009_add_tokens_to_usage_logs.py  010_add_is_blocked_to_users.py  011_credit_balance.py  012_credit_transaction_document.py  013_create_vouchers.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py  encryption.py  logging.py  security.py
backend/app/db/: session.py
backend/app/features/: __init__.py  document_analyzer_anonymization.py  document_analyzer_encryption.py  registry.py  service.py
backend/app/models/: __init__.py  credit_transaction.py  document.py  document_analysis.py  folder.py  plugin_execution.py  usage_log.py  user.py  user_feature_flag.py  user_settings.py  voucher.py  workspace_enabled_plugin.py
backend/app/plugins/: __init__.py  base.py  contracts.py  helpers.py  registry.py
backend/app/schemas/: __init__.py  analysis.py  billing.py  dashboard.py  document.py  folder.py  plugins.py  settings.py  tools.py  usage.py  user.py
backend/app/services/: case_law_search.py  document_meta.py  email.py  folders.py  llm_client.py  ocr.py  text_extraction.py  usage.py  (+2 more)
backend/smartanalyzer_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+165 files in other folders)
