[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartanalyzer-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "pydantic[email]",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt<5",
    "python-multipart",
    "pypdf",
    "python-docx",
    "openpyxl",
    "openai",
    "cryptography",
    "numpy<2",
    "opencv-python-headless",
    "Pillow",
    "pillow-heif",
    "PyMuPDF",
    "safetensors",
    "torch>=2.2,<2.3",
    "torchvision>=0.17,<0.18",
    "transformers>=4.41,<4.42",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
